--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -21,31 +21,137 @@
             Recipes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/views/layouts/recipes/all_recipes/index_all_recipes.html">All Recipes</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/snacks/index_snacks.html">Snacks</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/breakfast/index_breakfast.html">Breakfast</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/lunch/index_lunch.html">Lunch</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/dinner/index_dinner.html">Dinner</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/dessert/index_dessert.html">Dessert</a></li>
             <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/all_recipes/index_all_recipes.html">
+                <img src="/public/images/icons/recipes.png" alt="Recipes Icon" class="header-icon">
+                All Recipes
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/snacks/index_snacks.html">
+                <img src="/public/images/icons/snack.png" alt="Snack Icon" class="header-icon">
+                Snacks
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/breakfast/index_breakfast.html">
+                <img src="/public/images/icons/english-breakfast.png" alt="Breakfast Icon" class="header-icon">
+                Breakfast
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/lunch/index_lunch.html">
+                <img src="/public/images/icons/lunch-time.png" alt="Lunch Icon" class="header-icon">
+                Lunch
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/dinner/index_dinner.html">
+                <img src="/public/images/icons/dinner.png" alt="Dinner Icon" class="header-icon">
+                Dinner
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/dessert/index_dessert.html">
+                <img src="/public/images/icons/dessert.png" alt="Dessert Icon" class="header-icon">
+                Dessert
+              </a>
+            </li>
+
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/appetizers/index_appetizers.html">Appetizers & Starters</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/drinks/index_drinks.html">Drinks & Smoothies</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/salads/index_salads.html">Salads</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/soups/index_soups.html">Soups</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/vegan/index_vegan.html">Vegan</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/vegetarian/index_vegetarian.html">Vegetarian</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/keto_and_low_carb/index_keto_and_low_carb.html">Low-Carb & Keto</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/side_dishes/index_side_dishes.html">Side Dishes</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/gluten_free/index_gluten_free.html">Gluten-Free</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/holidays_and_special_occasions/index_holidays_and_special_occasions.html">Holiday & Special Occasions</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/quick_and_easy/index_quick_and_easy.html">Quick & Easy</a></li>
             <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/appetizers/index_appetizers.html">
+                <img src="/public/images/icons/appertizers.png" alt="Appetizers Icon" class="header-icon">
+                Appetizers & Starters
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/drinks/index_drinks.html">
+                <img src="/public/images/icons/smoothie.png" alt="Smoothie Icon" class="header-icon">
+                Drinks & Smoothies
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/salads/index_salads.html">
+                <img src="/public/images/icons/salad.png" alt="Salad Icon" class="header-icon">
+                Salads
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/soups/index_soups.html">
+                <img src="/public/images/icons/soup.png" alt="Soup Icon" class="header-icon">
+                Soups
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/vegan/index_vegan.html">
+                <img src="/public/images/icons/vegan.png" alt="Vegan Icon" class="header-icon">
+                Vegan
+              </a>
+            </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/vegetarian/index_vegetarian.html">
+                <img src="/public/images/icons/vegetarian.png" alt="Vegetarian Icon" class="header-icon">
+                Vegetarian
+              </a>
+            </li>
+
+          <li>
+            <a class="dropdown-item" href="/views/layouts/recipes/keto_and_low_carb/index_keto_and_low_carb.html">
+              <img src="/public/images/icons/keto.png" alt="Keto Icon" class="header-icon">
+              Low-Carb & Keto
+            </a>
+          </li>
+
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/side_dishes/index_side_dishes.html">
+                <img src="/public/images/icons/side_dish.png" alt="Side Dish Icon" class="header-icon">
+                Side Dishes
+              </a>
+            </li>
+
+          <li>
+            <a class="dropdown-item" href="/views/layouts/recipes/gluten_free/index_gluten_free.html">
+              <img src="/public/images/icons/gluten-free.png" alt="Gluten-Free Icon" class="header-icon">
+              Gluten-Free
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item"
+              href="/views/layouts/recipes/holidays_and_special_occasions/index_holidays_and_special_occasions.html">
+              <img src="/public/images/icons/christmas_dinner.png" alt="Holiday Icon" class="header-icon">
+              Holiday & Special Occasions
+            </a>
+          </li>
+
+          <li>
+            <a class="dropdown-item" href="/views/layouts/recipes/quick_and_easy/index_quick_and_easy.html">
+              <img src="/public/images/icons/quick.png" alt="Quick Icon" class="header-icon">
+              Quick & Easy
+            </a>
+          </li>
+
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="/merchandise_links.html"><strong>Amazon Shopping</strong></a>
-            </li>
+          <li>
+            <a class="dropdown-item" href="/merchandise_links.html">
+              <img src="/public/images/icons/amazon.png" alt="Amazon Icon" class="header-icon">
+              <strong>Amazon Shopping</strong>
+            </a>
+          </li>
+
           </ul>
         </li>
         <!-- Healthy Tips Dropdown -->
@@ -55,9 +161,24 @@
             Healthy Tips
           </a>
           <ul class="dropdown-menu" aria-labelledby="healthyTipsDropdown">
-            <li><a class="dropdown-item" href="/views/healthy_tips.html">Healthy Tips</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/healthy_tips/kitchen_tips.html">Kitchen Tips</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/healthy_tips/articles.html">Health Articles</a></li>
+            <li>
+              <a class="dropdown-item" href="/views/healthy_tips.html">
+                <img src="/public/images/icons/diet.png" alt="Diet Icon" class="header-icon">
+                Healthy Tips
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/views/layouts/healthy_tips/kitchen_tips.html">
+                <img src="/public/images/icons/chef.png" alt="Chef Icon" class="header-icon">
+                Kitchen Tips
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/views/layouts/healthy_tips/articles.html">
+                <img src="/public/images/icons/application.png" alt="Application Icon" class="header-icon">
+                Health Articles
+              </a>
+            </li>
           </ul>
         </li>
         
@@ -73,9 +194,29 @@
             The Science
           </a>
           <ul class="dropdown-menu" aria-labelledby="scienceDropdown">
-            <li><a class="dropdown-item" href="/views/science.html">The Science</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/science/science_articles.html">Science Articles</a></li>
-            <li><a class="dropdown-item" href="/views/layouts/recipes/science/convertor.html">Blood Glucose Convertor</a></li>
+            <li>
+              <a class="dropdown-item" href="/views/science.html">
+                <img src="/public/images/icons/microscope.png" alt="Microscope Icon" class="header-icon">
+                The Science
+              </a>
+            </li>
+              <a class="dropdown-item" href="/views/layouts/health_monitoring_essentials.html">
+                <img src="/public/images/icons/heart-rate.png" alt="Heart Rate Icon" class="header-icon">
+                Health Monitoring Essentials
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/science/science_articles.html">
+                <img src="/public/images/icons/application.png" alt="Application Icon" class="header-icon">
+                Science Articles
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/views/layouts/recipes/science/convertor.html">
+                <img src="/public/images/icons/calculator.png" alt="Calculator Icon" class="header-icon">
+                Blood Glucose Convertor
+              </a>
+            </li>
           </ul>
         </li>
 
