--- a/public/styles/healthy_tips/healthy_tips.css
+++ b/public/styles/healthy_tips/healthy_tips.css
@@ -153,3 +153,15 @@
 .essentials-size {
     max-height: 200px;
 }
+
+/* CSS for styling h4 elements */
+h4 {
+    color: #2A7662;
+    font-weight: bold;
+}
+
+/* CSS for styling h3 elements */
+h3 {
+    color: #dc3545;
+    font-weight: bold;
+}
