Keeping styling similar for all article pages

--- a/public/styles/kitchen_tips/kitchen_tips.css
+++ b/public/styles/kitchen_tips/kitchen_tips.css
@@ -65,3 +65,15 @@
     display: block;
     /* Ensures the button stays block level to center properly */
 }
+
+/* CSS for styling h4 elements */
+h4 {
+    color: #2A7662;
+    font-weight: bold;
+}
+
+/* CSS for styling h3 elements */
+h3 {
+    color: #dc3545;
+    font-weight: bold;
+}
