--- a/public/styles/science.css
+++ b/public/styles/science.css
@@ -78,3 +78,15 @@
         /* Fill the width on mobile */
     }
 }
+
+/* CSS for styling h4 elements */
+h4 {
+    color: #2A7662;
+    font-weight: bold;
+}
+
+/* CSS for styling h3 elements */
+h3 {
+    color: #dc3545;
+    font-weight: bold;
+}
