Added spelling to workplace settings

--- a/views/layouts/healthy_tips/flours.html
+++ b/views/layouts/healthy_tips/flours.html
@@ -781,8 +781,8 @@
         </p>
         <h3 id="einkorn-flour">Einkorn Flour: The Ancient Grain with Modern Benefits</h3>
         <p>
-            Einkorn flour <a href='https://amzn.to/3CWOJMU' target='_blank'>(Amazon EU/UK)</a> or <a
-                href='https://amzn.to/3Otzgqp' target='_blank'>(Amazon US/Can)</a>, derived from <em>Triticum monococcum</em>,
+            Einkorn flour <a href='https://amzn.to/3CWOJMU' target='_blank' rel="noopener">(Amazon EU/UK)</a> or <a
+                href='https://amzn.to/3Otzgqp' target='_blank' rel="noopener">(Amazon US/Can)</a>, derived from <em>Triticum monococcum</em>,
             is an ancient grain and one of the earliest cultivated forms of wheat. Known for its rich, nutty flavour and
             nutrient-dense profile, it is prized for its simplicity and natural characteristics, making it a healthier
             alternative to modern refined wheat. However, unlike gluten-free flours, einkorn contains gluten, though at a lower
