Fixed extra < in title of empanadas

--- a/views/layouts/recipes/recipe_pages/empanadas.html
+++ b/views/layouts/recipes/recipe_pages/empanadas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <<title>Lupin Flour Empanadas: The Real Naked Swedish Chef</title>
+    <title>Lupin Flour Empanadas: The Real Naked Swedish Chef</title>
 
 <!-- Dynamic Meta Tags for Open Graph and Twitter -->
 <meta property="og:title" content="Lupin Flour Empanadas" />
