--- a/public/styles/healthy_tips/healthy_tips.css
+++ b/public/styles/healthy_tips/healthy_tips.css
@@ -165,3 +165,10 @@ h3 {
     color: #dc3545;
     font-weight: bold;
 }
+
+.flag-icon {
+    width: 30px;
+    height: 22px;
+    margin-right: 8px;
+    vertical-align: middle;
+}
